<resources>
    <string name="app_name">LucaLAndroidERestaurant</string>
    <string name="text_entree">Entrées</string>
    <string name="text_plats">Plats</string>
    <string name="text_desserts">Desserts</string>
    <string name="category">Catégorie</string>
    <string name="button_prix">TOTAL :  </string>
    <string name="image_view_select" />
    <string-array name="items_list">
        <item>Pate Carbo</item>
        <item>Pate Patrouille</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket_icon_delete_content_description">basketIconDeleteContentDescription</string>
    <string name="basket_button_delete_all_content_description">basketButtonDeleteAllContentDescription</string>
    <string name="basket_button_buy">Passer commande</string>
    <string name="basket_title">Commande en cours</string>
    <string name="basket_total_quantity">Quantité totale :  </string>
    <string name="total_price">Total :   </string>
    <string name="add_to_basket">Ajout au panier réussi</string>
    <string name="button_plus">buttonplus</string>
    <string name="button_moins">buttonmoins</string>
    <string name="quantity_text">1</string>
    <string name="basket_delete_all_txt">Votre panier a été supprimé</string>

    <string name="cart_badge" translatable="false">0</string>

    <!-- Shared Preferences -->
    <string name="sp_file_name">SharedPreferences</string>
    <string name="sp_total_quantity">totalBasketQuantity</string>
    <string name="sp_total_price">totalBasketPrice</string>
    <string name="bluetooth">-</string>
    <string name="basket">-</string>
    <string name="ble_text">Bluetooth</string>
    <string name="bleScan_text">Lancer le Scan BLE</string>
    <string name="name_ble_text">Device Unknown</string>
    <string name="ble_device_disconnected">Déconnecté</string>
    <string name="ble_device_connected">Connecté</string>
    <string name="lire">Lire</string>
    <string name="ecrire">Ecrire</string>
    <string name="notifier">Notifier</string>
    <string name="ble_device_write_characteristic_title">Write in this charasteristic</string>
    <string name="ble_device_write_characteristic_confirm">Valider</string>
    <string name="ble_device_write_characteristic_cancel">Annuler</string>
    <string name="nous_rejoindre">Nous rejoindre !</string>
    <string name="maps_text">Maps</string>


    <string name="ble_device_status">Statut : %1$s</string>
    <string name="ble_device_status_connecting">Connexion en cours</string>
    <string name="ble_device_status_connected">Connecté</string>
    <string name="ble_device_status_disconnected">Déconnecté</string>
    <string name="ble_device_status_disconnecting">Déconnexion en cours</string>
    <string name="todo">TODO</string>
</resources>